--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 TELEGRAM_TOKEN=your_telegram_token
 OPENAI_API_KEY=your_openai_api_key
+BOT_USERNAME=your_bot_username
+BROADCAST_CHAT_ID=your_chat_id
