--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/humps": "^2.0.2",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "humps": "^2.0.1",
     "openai": "^3.1.0",
     "simple-node-logger": "^21.8.12",
-    "telegraf": "^4.11.2"
+    "telegraf": "^4.11.2",
+    "types": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
