chore(): add sqlite

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.0.3",
     "openai": "^3.2.0",
     "simple-node-logger": "^21.8.12",
+    "sqlite3": "^5.1.4",
     "telegraf": "^4.11.2"
   },
   "devDependencies": {
