feat(Env): add development env

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ OPENAI_API_KEY=your_openai_api_key
 BOT_USERNAME=your_bot_username
 BROADCAST_CHAT_ID=your_chat_id
 BASE_SYSTEM_CHAT="Answer questions that are based on Computer Science Department at PUC de Chile"
+DATABASE_URL=yout_database_url
