--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@prisma/client": "5.0.0",
     "dotenv": "^16.0.3",
     "openai": "^3.2.0",
+    "pg": "^8.11.1",
+    "pgvector": "^0.1.4",
+    "pgvector-ts": "^0.1.2",
+    "prisma": "^5.0.0",
     "simple-node-logger": "^21.8.12",
     "sqlite3": "^5.1.4",
     "telegraf": "^4.11.2"
