--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "@prisma/client": "5.0.0",
+    "csv-parse": "^5.4.0",
     "dotenv": "^16.0.3",
+    "jsdom": "^22.1.0",
     "openai": "^3.2.0",
     "pg": "^8.11.1",
     "pgvector": "^0.1.4",
     "pgvector-ts": "^0.1.2",
     "prisma": "^5.0.0",
+    "scrape-it": "^6.0.1",
+    "scrapy": "^0.0.1",
     "simple-node-logger": "^21.8.12",
     "sqlite3": "^5.1.4",
     "telegraf": "^4.11.2"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.1",
     "@types/node": "^18.13.0",
     "typescript": "^4.9.5"
   },
